Changelog
=========

4.9.dev0 - (unreleased)
-----------------------

4.8 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

4.7 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

4.6 - (2014-01-21)
------------------
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

4.5 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  for eea.faceted.tool
  [ichimdav refs #15651]

4.4 - (2013-08-09)
------------------
* Change: set IVideo from eea.mediacentre instead of p4a.IVideoEnhanced for
  file videos
  [ichimdav 15234]

4.3 - (2013-06-17)
------------------
* Change: updated link to site setup
  [ghicale]

4.2 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

4.1 - (2011-11-18)
------------------
* Re-release broken egg

4.0 - (2011-11-18)
------------------
* Cleanup: Fixed all pylint, pyflakes violations
  [voineali #4228]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.0.4 compatible release
  [voineali #4228]

1.6.1 - (2010-09-06)
--------------------
* Change: Defined apply_index method on portal_faceted in
  order to be used by faceted counter
  [voineali #3139]

1.4 (2010-06-16)
----------------
* Bug fix: Run profile importVarious only in eea.faceted.tool context
  [voineali]

1.3 (2010-01-04)
----------------
* Bug fix: Fixed that if there was a portal type mapping defined in
  portal_faceted only for object_provides or portal_type faceted
  search would return no results
  [voineali #2861]

1.2 (2009-11-09)
----------------