@@ -40,9 +40,10 @@
                 tal:attributes="value ptype/getId" />
             </td>
             <td>
-              <span tal:attributes="
-                title ptype/title|string:;"
-                tal:content="ptype/title|string:" />
+                <a tal:attributes="href string:${context/absolute_url}/${ptype/id}/@@edit" tal:define="pid ptype/title">
+                             <span tal:attributes="title pid"
+                                     tal:content="pid" />
+                </a>
             </td>
             <td>
               <span tal:attributes="
