@@ -1,0 +1,4 @@
+""" Config
+"""
+from zope.i18nmessageid.message import MessageFactory
+EEAMessageFactory = MessageFactory('eea')
