@@ -3,6 +3,9 @@ Changelog
 
 4.9.dev0 - (unreleased)
 -----------------------
+* Feature: switched to z3c.form and added edit form for existing portal_types
+  within portal_faceted tool
+  [ichimdav refs #70786]
 
 4.8 - (2015-08-18)
 ------------------
